# xParser

./: main.env  pyproject.toml  select.sql
halone/bot/: __init__.py
halone/clients/: __init__.py  hiobi.py  huobi.py  mxc.py  poloniex.py
halone/patterns/: __init__.py  observer.py
tests/: test_1.py
xparser/: main.py
xparser/core/: __init__.py  config.py
xparser/core/impl/: __init__.py  platform.py  pool.py  worker.py
xparser/core/interfaces/: __init__.py  platform.py  pool.py  worker.py
xparser/database/: __init__.py  models.py
xparser/dataclasses/: __init__.py  datatypes.py  impl.py  interfaces.py
